# XboxMemCard

./: CMakeLists.txt  README.md  XboxMemCard.code-workspace  flash_storage.c  flash_storage.h  main.c  main.cpp  msc_disk.c  sd_card.h  sd_card_storage.c  sd_card_storage.h  storage.h  usb_descriptors.c
.github/workflows/: build.yml
FatFs_SPI/: CMakeLists.txt
XboxMemCard/: CMakeLists.txt
libs/FatFsSPI/: CMakeLists.txt
libs/FatFsSPI/ff15/source/: ffconf.h
libs/FatFsSPI/includes/: debug.h  ff_stdio.h
libs/FatFsSPI/sd_driver/: hw_config.c  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  spi.c
libs/FatFsSPI/src/: debug.c  ff_stdio.c  glue.c
libs/PIDisplayLib/: CMakeLists.txt
libs/PIDisplayLib/includes/: color.h  deviceLegacy.h  deviceTouch.h  displayBuffer.h  displayConfig.h  displayDriver.h  displayGC9A01A.h  displayILI9341.h  displaySH1106.h  displaySH1122.h  displaySSD1306.h  displaySSD1309.h  displayST7789.h  fonts.h
libs/PIDisplayLib/src/: color.cpp  deviceLegacy.cpp  deviceTouch.cpp  displayBuffer.cpp  displayDriver.cpp  displayGC9A01A.cpp  displayILI9341.cpp  displaySH1106.cpp  displaySH1122.cpp  displaySSD1306.cpp  displaySSD1309.cpp  displayST7789.cpp  fonts.cpp
